# circlePack

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  pythonAnalysisLibrary.py  pythonInclude.py  runCirclePack.py  runParallelW.py
data/: sim-N=000100-phi=0.8400000-seed=00000.csv  sim-N=000100-phi=0.8400000-seed=00001.csv
include/: atom.h  dem.h  helperMath.h  params.h  type.h
src/: atom.cpp  dem.cpp  main.cpp  params.cpp
